# UltraDINO

./: ENV  README.md  pyproject.toml
classification/: test.py  train.py
classification/configs/: fine_tune_barcelona_dinov2_vitb14.yaml  fine_tune_barcelona_dinov2_vits14.yaml  fine_tune_barcelona_dinus_2M_vits16.yaml  fine_tune_barcelona_dinus_template.yaml  fine_tune_barcelona_dinus_vits16.yaml  fine_tune_barcelona_ibot_vitb_im1k.yaml  fine_tune_barcelona_ibot_vitb_im22k.yaml  fine_tune_barcelona_ibot_vits_im1k.yaml  fine_tune_barcelona_timm_dinov2_vitb14.yaml  fine_tune_barcelona_timm_dinov2_vits14.yaml  fine_tune_barcelona_usfm_vitb16.yaml  from_scratch_barcelona_vitb14.yaml  from_scratch_barcelona_vitb16.yaml  from_scratch_barcelona_vits16.yaml  linear_barcelona_dinov2_vitb14.yaml  linear_barcelona_dinov2_vits14.yaml  linear_barcelona_dinov2_vits14_518.yaml  linear_barcelona_dinus_template.yaml  linear_barcelona_dinus_vits16.yaml  linear_barcelona_ibot_vitb_im1k.yaml  linear_barcelona_ibot_vitb_im22k.yaml  linear_barcelona_ibot_vits_im1k.yaml  linear_barcelona_timm_dinov2_vitb14.yaml  linear_barcelona_timm_dinov2_vits14.yaml  linear_barcelona_usfm_vitb16.yaml
classification/data/: classification_data.py  fetal_planes_dataset.py  sono41_dataset.py
classification/models/: backbones.py  lightning_model.py  timm_vit.py  usfm_vit.py
classification/utils/: lr_scheduler.py  positional_embedding.py
data/fetal_planes_db/: test_split.csv  train_split.csv  val_split.csv
dinov2/configs/: ssl_default_config.yaml
segmentation/: test.py  train.py
(+157 files in other folders)
